--- a/telegram_bot/post_on_tg.ipynb
+++ b/telegram_bot/post_on_tg.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method Series.keys of 0    2101.10794\n",
-      "Name: id, dtype: object>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import telegram \n",
+    "import telegram\n",
     "import pandas as pd\n",
     "from telegram.ext import Updater\n",
     "def post_the_message():\n",
@@ -37,7 +28,8 @@
     "    for i in ids.keys():\n",
     "        telegram_text=telegram_text+ published[i].strftime(\"%m/%d/%Y\")+ \"\\n \\n\"+\"'\"+ titles[i]+ \"'\" +\"\\n \\n\"+author_list[i]+\"\\n\"+links[i]+\"\\n\"+arxiv_primary_categories[i] +\"\\n \\n \\n\"\n",
     "        bot.sendMessage(chat_id='@openmajoranachannel', text=telegram_text)\n",
-    "    return "
+    "    return \n",
+    "post_the_message()"
    ]
   },
   {
